# cppLearning

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  math.hpp
test/: math_test.cpp
